--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -59,6 +59,7 @@
                 border: none;
                 outline: none;
                 background-color: rgb(240, 240, 240);
+                color: black;
                 padding: 10px;
                 border-radius: 10px;
             }
